--- a/product.html
+++ b/product.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/favicon/favicon.ico">
     <link rel="stylesheet" href="css/fancybox.css">
     <link rel="stylesheet" href="css/font-awesome.css">
     <link rel="stylesheet" href="css/font-awesome.min.css">
@@ -152,7 +153,7 @@
                     </button>
 
                     <button class="question-btn">
-                        <svg width="33" height="33" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <svg class="question-icon" viewBox="0 0 33 33" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path d="M16.75 10 L16.75 10.01" stroke="black" stroke-width="1" stroke-linecap="round" />
                             <path d="M16.75 22V14.5" stroke="black" stroke-width="1" stroke-linecap="round" />
                             <path d="M31.75 16C31.75 24.2845 25.0345 31 16.75 31C8.4655 31 1.75 24.2845 1.75 16C1.75 7.7155 8.4655 1 16.75 1C25.0345 1 31.75 7.7155 31.75 16Z" stroke="black" stroke-width="1" stroke-miterlimit="10" stroke-linecap="round" stroke-linejoin="round" />
@@ -324,8 +325,8 @@
                     </div>
 
                     <div class="product-desc-cards">
-                        <div class="product-desc-card">
-                            <div class="product-desc-card-head product-desc-card-review">
+                        <div class="product-desc-card open">
+                            <div class="product-desc-card-head product-desc-card-review-container">
                                 <p class="product-desc-card-title">
                                     Характеристики
                                 </p>
@@ -402,7 +403,7 @@
                                 </div>
 
                                 <button class="product-desc-card-open-btn open-btn-review">
-                                    <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg class="product-desc-card-open-btn-icon" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="19.5" cy="19.5001" r="19" stroke="black"/>
                                         <path d="M19.5 11.0001V19.5001M19.5 28.0001V19.5001M19.5 19.5001H11H28" stroke="black"/>
                                     </svg>
@@ -410,14 +411,14 @@
                             </div>
                         </div>
 
-                        <div class="product-desc-card">
+                        <div class="product-desc-card ">
                             <div class="product-desc-card-head">
                                 <p class="product-desc-card-title">
                                     Описание
                                 </p>
 
                                 <div class="product-desc-card-info">
-                                    <p>
+                                    <p class="product-desc-card-info-text">
                                         Представляем вам великолепный реечный светильник LEEDS LONG — идеальное решение для создания уютного и стильного интерьера! Этот светильник с цилиндрическими плафонами станет ярким акцентом в вашем доме и подчеркнёт вашу индивидуальность.<br><br>
                                         Особенностью данного светильника является поворотный механизм, благодаря которому вы сможете регулировать направление света, создавая различные световые сценарии. Это позволит вам не только осветить все уголки комнаты, но и создать уютную атмосферу в любой ситуации.<br><br>
                                         Реечный светильник LEEDS LONG представлен в двух комплектациях: на 6 и на 7 ламп, мощностью света на 12W и на 14W, что даёт возможность выбрать наиболее подходящий вариант для вашего помещения. Благодаря этому, вы сможете подобрать оптимальное количество ламп для освещения любой комнаты.<br><br>
@@ -426,7 +427,7 @@
                                 </div>
 
                                 <button class="product-desc-card-open-btn">
-                                    <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg class="product-desc-card-open-btn-icon" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="19.5" cy="19.5001" r="19" stroke="black"/>
                                         <path d="M19.5 11.0001V19.5001M19.5 28.0001V19.5001M19.5 19.5001H11H28" stroke="black"/>
                                     </svg>
@@ -434,8 +435,8 @@
                             </div>
                         </div>
 
-                        <div class="product-desc-card open">
-                            <div class="product-desc-card-head product-desc-card-review">
+                        <div class="product-desc-card">
+                            <div class="product-desc-card-head product-desc-card-review-container">
                                 <p class="product-desc-card-title">
                                     Отзывы
                                 </p>
@@ -523,7 +524,6 @@
                                                 <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
                                                 </svg>
-
 
                                                 <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
@@ -629,7 +629,10 @@
                                                 </div>
 
                                                 <input type="text" placeholder="Ваше имя *">
-                                                <input type="tel" placeholder="Номер телефона">
+                                                <input type="tel" id="phone" placeholder="Номер телефона">
+                                                <span class="error-message phone-error">
+                                                    Введите корректный номер телефона
+                                                </span>
                                                 <textarea placeholder="Текст отзыва *"></textarea>
                                                 
                                                 <div class="file-upload-wrapper">
@@ -680,7 +683,7 @@
                                 </div>
 
                                 <button class="product-desc-card-open-btn open-btn-review">
-                                    <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                    <svg class="product-desc-card-open-btn-icon" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
                                         <circle cx="19.5" cy="19.5001" r="19" stroke="black"/>
                                         <path d="M19.5 11.0001V19.5001M19.5 28.0001V19.5001M19.5 19.5001H11H28" stroke="black"/>
                                     </svg>
@@ -711,7 +714,7 @@
                                     </div>
 
                                     <button class="product-desc-card-open-btn">
-                                        <svg width="39" height="39" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <svg class="product-desc-card-open-btn-icon" viewBox="0 0 39 39" fill="none" xmlns="http://www.w3.org/2000/svg">
                                             <circle cx="19.5" cy="19.5001" r="19" stroke="black"/>
                                             <path d="M19.5 11.0001V19.5001M19.5 28.0001V19.5001M19.5 19.5001H11H28" stroke="black"/>
                                         </svg>
