--- a/product.html
+++ b/product.html
@@ -411,7 +411,7 @@
                             </div>
                         </div>
 
-                        <div class="product-desc-card ">
+                        <div class="product-desc-card">
                             <div class="product-desc-card-head">
                                 <p class="product-desc-card-title">
                                     Описание
@@ -1377,43 +1377,55 @@
 
                         <div class="footer-navigation-list">
                             <div class="footer-navigation-list-info">
-                                <p class="footer-navigation-list-title">
-                                    Телефон
-                                </p>
+                                <div class="footer-navigation-list-info-container">
+                                    <div class="footer-navigation-list-info-first-inner">
+                                        <p class="footer-navigation-list-title">
+                                            Телефон
+                                        </p>
 
-                                <div class="footer-navigation-list-info-numbers">
-                                    <a href="tel:+74950212119" class="footer-navigation-list-item">
-                                        +7 495 021 21 19
-                                    </a>
+                                        <div class="footer-navigation-list-info-numbers">
+                                            <a href="tel:+74950212119" class="footer-navigation-list-item">
+                                                +7 495 021 21 19
+                                            </a>
 
-                                    <a href="tel:+79267337336" class="footer-navigation-list-item">
-                                        +7 926 733 73 36
-                                    </a>
+                                            <a href="tel:+79267337336" class="footer-navigation-list-item">
+                                                +7 926 733 73 36
+                                            </a>
+                                        </div>
+                                    </div>
+
+                                    <div class="footer-navigation-list-info-first-inner">
+                                        <p class="footer-navigation-list-title">
+                                            Электронная почта
+                                        </p>
+
+                                        <a href="mailto:office@pulssar.ru" class="footer-navigation-list-item">
+                                            office@pulssar.ru
+                                        </a>
+                                    </div>
                                 </div>
-
-                                <p class="footer-navigation-list-title">
-                                    Электронная почта
-                                </p>
-
-                                <a href="mailto:office@pulssar.ru" class="footer-navigation-list-item">
-                                    office@pulssar.ru
-                                </a>
-
-                                <p class="footer-navigation-list-title">
-                                    Адрес
-                                </p>
-
-                                <a target="_blank" href="https://yandex.ru/maps/org/pulssar/192598375195/?ll=37.578712%2C55.678768&z=17" class="footer-navigation-list-item">
-                                    117218 Москва, ул. Кржижановского, 23, к.3<br> (только для выдачи заказов)
-                                </a>
                                 
-                                <p class="footer-navigation-list-title">
-                                    Режим работы
-                                </p>
+                                <div class="footer-navigation-list-info-container">
+                                    <div class="footer-navigation-list-info-first-inner">
+                                        <p class="footer-navigation-list-title">
+                                            Адрес
+                                        </p>
 
-                                <p class="footer-navigation-list-info-text">
-                                    В рабочие дни с 10:00 до 20:00
-                                </p>
+                                        <a target="_blank" href="https://yandex.ru/maps/org/pulssar/192598375195/?ll=37.578712%2C55.678768&z=17" class="footer-navigation-list-item">
+                                            117218 Москва, ул. Кржижановского, 23, к.3<br> (только для выдачи заказов)
+                                        </a>
+                                    </div>
+
+                                    <div class="footer-navigation-list-info-first-inner">
+                                        <p class="footer-navigation-list-title">
+                                            Режим работы
+                                        </p>
+
+                                        <p class="footer-navigation-list-info-text">
+                                            В рабочие дни с 10:00 до 20:00
+                                        </p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
