Added order page

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 
             <div class="links">
                 <a href="product.html" target="_blank">1. Карточка товара</a>
+                <a href="order.html" target="_blank">2. Оформление заказа</a>
             </div>
         </div>
     </div>
