--- a/product.html
+++ b/product.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/styles_1721313729.css">
     <link rel="stylesheet" href="css/template_styles.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Карточка товара</title>
+    <title>Pulssar - Карточка товара</title>
 </head>
 <body>
     <!-- Шапка -->
