--- a/order.html
+++ b/order.html
@@ -234,7 +234,7 @@
 
                         <input type="text" placeholder="Ваше имя *" class="cart-form-input">
                         <input id="phone" type="tel" placeholder="Номер телефона *" class="cart-form-input">
-                        <span class="error-message phone-error">
+                        <span class="error-message-2 phone-error">
                             Введите корректный номер телефона
                         </span>
                         <input type="text" placeholder="E-mail *" class="cart-form-input">
