--- a/product.html
+++ b/product.html
@@ -87,7 +87,7 @@
                 </p>
 
                 <div class="product-reviews-container">
-                    <div class="product-reviews-container-left-side">
+                    <a href="#reviews" class="product-reviews-container-left-side">
                         <div class="product-reviews-icons">
                             <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                 <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
@@ -113,7 +113,7 @@
                         <p class="product-reviews-text">
                             (20 отзывов)
                         </p>
-                    </div>
+                    </a>
 
                     <div class="product-reviews-container-right-side">
                         <img src="img/quality-certificate.svg" alt="Сертификат качества">
@@ -371,22 +371,22 @@
 
                                         <div class="product-desc-card-specification">
                                             <p>Форма плафона</p>
-                                            <p class="underline">цилиндр</p>
+                                            <a href="#" target="_blank">цилиндр</a>
                                         </div>
 
                                         <div class="product-desc-card-specification">
                                             <p>Цвет каркаса</p>
-                                            <p class="underline">светлое дерево</p>
+                                            <a href="#" target="_blank">светлое дерево</a>
                                         </div>
 
                                         <div class="product-desc-card-specification">
                                             <p>Цвет плафона</p>
-                                            <p class="underline">желтый</p>
+                                            <a href="#" target="_blank">желтый</a>
                                         </div>
 
                                         <div class="product-desc-card-specification">
                                             <p>Материал</p>
-                                            <p class="underline">Латунь H65</p>
+                                            <a href="#" target="_blank">Латунь H65</a>
                                         </div>
 
                                         <div class="product-desc-card-specification">
@@ -435,8 +435,8 @@
                             </div>
                         </div>
 
-                        <div class="product-desc-card">
-                            <div class="product-desc-card-head product-desc-card-review-container">
+                        <div class="product-desc-card product-desc-card-review">
+                            <div id="reviews" class="product-desc-card-head product-desc-card-review-container">
                                 <p class="product-desc-card-title">
                                     Отзывы
                                 </p>
