Added my-orders page

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
             <div class="links">
                 <a href="product.html" target="_blank">1. Карточка товара</a>
                 <a href="order.html" target="_blank">2. Оформление заказа</a>
+                <a href="my-orders.html" target="_blank">3. Мои заказы</a>
             </div>
         </div>
     </div>
