Added payment page

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                 <a href="product.html" target="_blank">1. Карточка товара</a>
                 <a href="order.html" target="_blank">2. Оформление заказа</a>
                 <a href="my-orders.html" target="_blank">3. Мои заказы</a>
+                <a href="payment.html" target="_blank">4. Оплата</a>
             </div>
         </div>
     </div>
