--- a/product.html
+++ b/product.html
@@ -18,7 +18,9 @@
 </head>
 <body>
     <!-- Шапка -->
-    <header>Шапка</header>
+    <header class="header-test">
+        Шапка
+    </header>
 
     <!-- Хлебные крошки -->
     <div class="breadcrumbs">
