--- a/order.html
+++ b/order.html
@@ -311,8 +311,8 @@
                             <p class="cart-form-title">Способ оплаты</p>
                         </div>
 
-                        <div>
-                            Интеграция системы оплаты
+                        <div class="ya-pay-example">
+                            <img src="img/ya-pay-example.svg" alt="">
                         </div>
 
                         <div class="accept-politics">
