--- a/product.html
+++ b/product.html
@@ -776,7 +776,7 @@
                                                     <input
                                                         type="file"
                                                         id="file-input"
-                                                        accept=".jpg,.jpeg,.png,.pdf"
+                                                        accept=".jpg, .jpeg, .png, .webp"
                                                         style="display: none;"
                                                     />  
 
