Added product-out-of-stock page

--- a/index.html
+++ b/index.html
@@ -54,10 +54,11 @@
             <h1>Pulssar</h1>
 
             <div class="links">
-                <a href="product.html" target="_blank">1. Карточка товара</a>
-                <a href="cart.html" target="_blank">2. Оформление заказа</a>
-                <a href="my-orders.html" target="_blank">3. Мои заказы</a>
-                <a href="payment.html" target="_blank">4. Оплата</a>
+                <a href="product.html" target="_blank">1. Карточка товара (в наличии)</a>
+                <a href="product-out-of-stock.html" target="_blank">2. Карточка товара (нет в наличии)</a>
+                <a href="cart.html" target="_blank">3. Оформление заказа</a>
+                <a href="my-orders.html" target="_blank">4. Мои заказы</a>
+                <a href="payment.html" target="_blank">5. Оплата</a>
             </div>
         </div>
     </div>
