--- a/product-out-of-stock.html
+++ b/product-out-of-stock.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="css/styles_1721313729.css">
     <link rel="stylesheet" href="css/template_styles.css">
     <link rel="stylesheet" href="css/style.css">
-    <title>Pulssar - Карточка товара (в наличии)</title>
+    <title>Pulssar - Карточка товара (нет в наличии)</title>
 </head>
 <body>
     <!-- Шапка -->
@@ -132,30 +132,8 @@
                     </div>
                 </div>
 
-                <div class="in-stocks">
-                    <div class="in-stock">
-                        <svg width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 3.75L6.5 9.25L15 0.75" stroke="#6FAB41" stroke-width="1.5"/>
-                        </svg>
-
-                        <span>В наличии</span>
-                    </div>
-
-                    <div class="in-stock">
-                        <svg width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 3.75L6.5 9.25L15 0.75" stroke="#6FAB41" stroke-width="1.5"/>
-                        </svg>
-
-                        <span>В Москве</span>
-                    </div>
-
-                    <div class="in-stock">
-                        <svg width="16" height="11" viewBox="0 0 16 11" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path d="M1 3.75L6.5 9.25L15 0.75" stroke="#6FAB41" stroke-width="1.5"/>
-                        </svg>
-
-                        <span>В Китае</span>
-                    </div>
+                <div class="no-stock">
+                    <span>Нет в наличии</span>
                 </div>
 
                 <div class="product-item-discount">
@@ -187,7 +165,7 @@
                 </div>
 
                 <div class="item-buttons js-item-buttons">
-                    <button class="add-to-cart-btn js-add-btn">
+                    <button class="add-to-cart-btn js-add-btn order-btn-dissabled">
                         Добавить в корзину
                     </button>
                     
@@ -207,7 +185,7 @@
                         </button>
                     </div>
 
-                    <button class="buy-now-btn">
+                    <button class="buy-now-btn order-btn-dissabled">
                         Купить в один клик
                     </button>
                 </div>
@@ -226,7 +204,7 @@
 
                         <div class="fixed-product-info-right-side">
                             <div class="item-buttons js-item-buttons">
-                                <button class="add-to-cart-btn fixed-add-to-cart-btn js-add-btn">
+                                <button class="add-to-cart-btn fixed-add-to-cart-btn js-add-btn order-btn-dissabled">
                                     Добавить в корзину
                                 </button>
                                 
@@ -246,7 +224,7 @@
                                     </button>
                                 </div>
 
-                                <button class="buy-now-btn fixed-buy-now-btn">
+                                <button class="buy-now-btn fixed-buy-now-btn order-btn-dissabled">
                                     Купить в один клик
                                 </button>
 
