--- a/product-out-of-stock.html
+++ b/product-out-of-stock.html
@@ -57,6 +57,16 @@
                             <img src="img/product/1.png" alt="">
                         </div>
 
+                        <div class="swiper-slide" data-type="video">
+                            <video
+                                class="product-main-video"
+                                preload="metadata"
+                                playsinline
+                                controls
+                                src="videos/video.mp4">
+                            </video>
+                        </div>
+
                         <div class="swiper-slide">
                             <img src="img/product/2.png" alt="">
                         </div>
