--- a/product.html
+++ b/product.html
@@ -61,6 +61,16 @@
                             <img src="img/product/2.png" alt="">
                         </div>
 
+                        <div class="swiper-slide" data-type="video">
+                            <video
+                                class="product-main-video"
+                                preload="metadata"
+                                playsinline
+                                controls
+                                src="videos/video.mp4">
+                            </video>
+                        </div>
+
                         <div class="swiper-slide">
                             <img src="img/product/3.png" alt="">
                         </div>
