--- a/product.html
+++ b/product.html
@@ -18,8 +18,10 @@
 </head>
 <body>
     <!-- Шапка -->
-    <header>
-        Шапка
+    <header class="header-test">
+        <div class="header-test-bottom">
+            Нижняя часть
+        </div>
     </header>
 
     <!-- Хлебные крошки -->
