Added other stars

--- a/product.html
+++ b/product.html
@@ -122,25 +122,11 @@
                 <div class="product-reviews-container">
                     <a href="#reviews" class="product-reviews-container-left-side">
                         <div class="product-reviews-icons">
-                            <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                            </svg>
-
-                            <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                            </svg>
-
-                            <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                            </svg>
-
-                            <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                            </svg>
-
-                            <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                            </svg>
+                            <img src="img/stars/star-fill.svg" alt="">
+                            <img src="img/stars/star-fill.svg" alt="">
+                            <img src="img/stars/star-fill.svg" alt="">
+                            <img src="img/stars/star-half-fill.svg" alt="">
+                            <img src="img/stars/star-no-fill.svg" alt="">
                         </div>
 
                         <p class="product-reviews-text">
