Added review images view

--- a/product.html
+++ b/product.html
@@ -333,7 +333,7 @@
 
                         <div class="select-configuration-card" data-id="2">
                             <div class="select-configuration-card-img">
-                                <img src="img/select-configuration-images/2.png" alt="">
+                                <img src="img/product/2.png" alt="">
                             </div>
 
                             <div class="select-configuration-card-description">
@@ -632,51 +632,12 @@
                                                 </svg>
                                             </div>
 
-                                            <div class="product-desc-card-review-texts">
-                                                <p class="product-desc-card-review-text">
-                                                    Люстра реально крутая, я её заказала на кухню, над столом повесила. Сделана из чернёной латуни, смотрится прям достойно. Но мне важен был и функционал, а он тут тоже не подкачал. Все плафоны, которых в моей модели семь, можно крутить. Они на рейке, закреплены надёжно. Свет в любую сторону можно направлять. Удобно, можно и готовить на столе, и кушать. Видно всё прекрасно. Стойка тут сборная, можно сделать подвес нужной длины.
-                                                </p>
-
-                                                <button class="product-desc-card-review-more-btn">
-                                                    <span class="btn-label">Читать весь отзыв</span>
-                                                    <svg class="review-arrow" width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                        <path d="M13 1L7 7L1 0.999999" stroke="#CFA567" stroke-width="1.5"/>
-                                                    </svg>
-                                                </button>
-                                            </div>
-                                        </div>
-
-                                        <div class="product-desc-card-review">
-                                            <div class="product-desc-card-review-head">
-                                                <p class="product-desc-card-review-author">
-                                                    Дарья                                            
-                                                </p>
-
-                                                <p class="product-desc-card-review-date">
-                                                    22.07.2024
-                                                </p>
-                                            </div>
-
-                                            <div class="product-desc-card-review-stars">
-                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                                                </svg>
-
-                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                                                </svg>
-
-                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                                                </svg>
-
-                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                                                </svg>
-
-                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
-                                                </svg>
+                                            <div class="product-desc-card-review-images">
+                                                <img src="img/product/1.png" alt="">
+                                                <img src="img/product/2.png" alt="">
+                                                <img src="img/product/3.png" alt="">
+                                                <img src="img/product/4.png" alt="">
+                                                <img src="img/product/1.png" alt="">
                                             </div>
 
                                             <div class="product-desc-card-review-texts">
@@ -717,6 +678,53 @@
                                                     <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
                                                 </svg>
 
+                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
+                                                </svg>
+
+                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
+                                                </svg>
+                                            </div>
+
+                                            <div class="product-desc-card-review-texts">
+                                                <p class="product-desc-card-review-text">
+                                                    Люстра реально крутая, я её заказала на кухню, над столом повесила. Сделана из чернёной латуни, смотрится прям достойно. Но мне важен был и функционал, а он тут тоже не подкачал. Все плафоны, которых в моей модели семь, можно крутить. Они на рейке, закреплены надёжно. Свет в любую сторону можно направлять. Удобно, можно и готовить на столе, и кушать. Видно всё прекрасно. Стойка тут сборная, можно сделать подвес нужной длины.
+                                                </p>
+
+                                                <button class="product-desc-card-review-more-btn">
+                                                    <span class="btn-label">Читать весь отзыв</span>
+                                                    <svg class="review-arrow" width="14" height="9" viewBox="0 0 14 9" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M13 1L7 7L1 0.999999" stroke="#CFA567" stroke-width="1.5"/>
+                                                    </svg>
+                                                </button>
+                                            </div>
+                                        </div>
+
+                                        <div class="product-desc-card-review">
+                                            <div class="product-desc-card-review-head">
+                                                <p class="product-desc-card-review-author">
+                                                    Дарья                                            
+                                                </p>
+
+                                                <p class="product-desc-card-review-date">
+                                                    22.07.2024
+                                                </p>
+                                            </div>
+
+                                            <div class="product-desc-card-review-stars">
+                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
+                                                </svg>
+
+                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
+                                                </svg>
+
+                                                <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                    <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
+                                                </svg>
+
 
                                                 <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
@@ -725,6 +733,11 @@
                                                 <svg width="28" height="26" viewBox="0 0 28 26" fill="none" xmlns="http://www.w3.org/2000/svg">
                                                     <path d="M14 0L17.1432 9.67376H27.3148L19.0858 15.6525L22.229 25.3262L14 19.3475L5.77101 25.3262L8.9142 15.6525L0.685208 9.67376H10.8568L14 0Z" fill="#CFA567"/>
                                                 </svg>
+                                            </div>
+
+                                            <div class="product-desc-card-review-images">
+                                                <img src="img/product/4.png" alt="">
+                                                <img src="img/product/1.png" alt="">
                                             </div>
 
                                             <div class="product-desc-card-review-texts">
@@ -1721,7 +1734,6 @@
             </div>
         </div>
     </div>
-
 
     <script src="js/swiper-bundle.min.js"></script>
     <script src="js/scripts.js"></script>
