Added review-sent banner

--- a/product.html
+++ b/product.html
@@ -818,7 +818,6 @@
                                                         </button>
                                                     </div>
                                                 </div>
-                                                
 
                                                 <button class="send-review-btn">
                                                     Отправить
@@ -834,6 +833,10 @@
                                                         <span class="checkbox-box"></span>
                                                     </label>
                                                     <p>Я соглашаюсь <span><a href="#">c политикой обработки персональных данных</a></span></p>
+                                                </div>
+
+                                                <div class="review-sent">
+                                                    Ваш отзыв отправлен
                                                 </div>
                                             </form>
                                         </div>
