Edited review section

--- a/product.html
+++ b/product.html
@@ -579,7 +579,7 @@
                             </div>
                         </div>
 
-                        <div class="product-desc-card product-desc-card-review">
+                        <div class="product-desc-card">
                             <div class="click-area"></div>
                             <div id="reviews" class="product-desc-card-head product-desc-card-review-container">
                                 <p class="product-desc-card-title">
@@ -598,6 +598,10 @@
                                     </div>
 
                                     <div class="product-desc-card-reviews">
+                                        <p class="no-reviews-text">
+                                            Отзывов пока что нет
+                                        </p>
+
                                         <div class="product-desc-card-review">
                                             <div class="product-desc-card-review-head">
                                                 <p class="product-desc-card-review-author">
@@ -847,9 +851,10 @@
                                     </svg>
                                 </button>
                             </div>    
-
-                            <div class="product-desc-card">
-                                <div class="click-area"></div>
+                        </div>
+                        
+                        <div class="product-desc-card">
+                            <div class="click-area"></div>
                                 <div class="product-desc-card-head">
                                     <p class="product-desc-card-title">
                                         Оплата и доставка
@@ -879,7 +884,6 @@
                                         </svg>
                                     </button>
                                 </div>
-                            </div>
                         </div>
                     </div>
                 </div>
